# whisper-parakeet-ahk

./: .gitignore  README.md  SETUP_GPU.md  find_program.py  fleurs_cpp_results.json  handy_history.py  handy_mode.py  record.ps1  record.py  run_opencode_tts.py  tts_speak.py  whisper.ahk  wintab.ahk
.opencode/: package-lock.json
.opencode/skills/mexico-shopping/: SKILL.md
.opencode/skills/mexico-shopping/agents/: openai.yaml
VoiceAssistant/runtime/npm-global/: opencode.cmd
eddy-audio-main/: .gitignore  AGENTS.md  BENCHMARK.md  BENCHMARK_RESULTS.md  CMakeLists.txt  benchmark_fleurs.py  claude.md  vcpkg.json
eddy-audio-main/ThirdPartyLicenses/: README.md
eddy-audio-main/benchmarks/: .gitignore  README.md  benchmark.py  pyproject.toml
eddy-audio-main/bindings/csharp/: Eddy.csproj  Native.cs  WhisperPipeline.cs
eddy-audio-main/bindings/csharp/examples/: WhisperExample.cs  WhisperExample.csproj
eddy-audio-main/cmake/: eddyConfig.cmake.in
eddy-audio-main/docs/: CPP_API.md  Troubleshooting.md
eddy-audio-main/documentation/: README.md  getting-started.md  performance-benchmarks.md
eddy-audio-main/examples/cpp/: CMakeLists.txt  benchmark_fleurs.cpp  benchmark_nemotron_fleurs.cpp  hf_fetch_models.cpp  nemotron_cli.cpp  parakeet_cli.cpp  text_normalizer.hpp  whisper_example.cpp
eddy-audio-main/include/eddy/: eddy_c.h
eddy-audio-main/include/eddy/backends/: backend.hpp  openvino_backend.hpp
eddy-audio-main/include/eddy/core/: app_dir.hpp  model.hpp  model_configs.hpp  runtime.hpp
eddy-audio-main/include/eddy/models/nemotron/: nemotron.hpp  nemotron_featurizer.hpp
eddy-audio-main/include/eddy/models/parakeet-v2/: parakeet.hpp  parakeet_chunking.hpp  parakeet_decoder.hpp  parakeet_encoder.hpp  parakeet_openvino.hpp  parakeet_preprocessor.hpp  tokenizer.hpp
eddy-audio-main/include/eddy/models/parakeet-v2/detail/: parakeet_impl.hpp
eddy-audio-main/include/eddy/pipelines/: whisper_pipeline.hpp
eddy-audio-main/include/eddy/utils/: audio_utils.hpp  ensure_models.hpp  openvino_utils.hpp
eddy-audio-main/src/: eddy_c.cpp
eddy-audio-main/src/backends/: openvino_backend.cpp
eddy-audio-main/src/core/: app_dir.cpp  model.cpp  runtime.cpp
eddy-audio-main/src/models/nemotron/: nemotron_featurizer.cpp  nemotron_openvino.cpp
eddy-audio-main/src/models/parakeet-v2/: parakeet_chunking.cpp  parakeet_decoder.cpp  parakeet_encoder.cpp  parakeet_openvino.cpp  parakeet_preprocessor.cpp  tokenizer.cpp
eddy-audio-main/src/pipelines/: whisper_pipeline.cpp
eddy-audio-main/src/utils/: audio_utils.cpp  ensure_models.cpp  openvino_utils.cpp
